# anki-cloud

./: .env.example  .sync-server-version  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.sync  LICENSE  README.md  TODO.md  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.standalone.yml  docker-compose.yml  package.json  release-please-config.json
.claude/: settings.json
.github/workflows/: ci.yml  commitlint.yml  release.yml
anki-sync-server/: Cargo.toml  README.md
anki-sync-server/rslib/: Cargo.toml
anki-sync-server/sync-storage-backends/: Cargo.toml
api/: Dockerfile  README.md  package.json
api/src/: auth.ts  index.ts  types.ts
db/: drizzle.config.ts  package.json  tsconfig.json
db/src/: encrypt.ts  index.ts  migrate.ts  schema.ts
docs/: SELF_HOSTING.md  mcp-integration.md
docs/decisions/: 0003-fork-rust-ankitects-sync-server.md  0004-use-oauth2-for-authentication-no-password-storage.md  0005-use-google-as-the-sole-oauth-provider-mvp.md  0007-mcp-server-wraps-rest-api-not-direct-db.md  0008-use-hono-on-bun-for-rest-api-and-mcp-server.md  0013-defer-pagination-rate-limiting-idempotency-and-bulk-endpoints-to-post-mvp.md
docs/research/: REST-API-over-rust-sync-server.md  (+1 more)
e2e/: README.md  package.json  tsconfig.json
e2e/src/: setup.ts
mcp/: Dockerfile  package.json  tsconfig.json
scripts/: fork-anki-sync-server.zsh  setup.zsh  smoke-test.sh
sync-platform-cloud/: Cargo.toml
sync-platform-cloud/src/: db.rs  lib.rs  main.rs  oauth.rs  token.rs
web/: .env.example  index.html  package.json  vite.config.ts
(+44 files in other folders)
